# fcmp

./: .gitignore  AGENTS.md  README.md  file_compare.py  pyproject.toml
src/: exporters.py
src/fcmp/: __init__.py
