[project]
name = "fcmp"
dynamic = ["version"]
description = "Compare directory trees for parity, with video proxy workflow support"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "thomjiji", email = "noadstrackers@duck.com" },
    { name = "userprojekt" },
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
]

[project.scripts]
fcmp = "fcmp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/fcmp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fcmp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
